# JpegExtractor

./: .gitignore  CMakeLists.txt  JpegExtractor.sln  README.md
Debug/: JpegExtractor.lib  JpegExtractorTest.ilk
JpegExtractor/: Component.cpp  Component.hpp  HuffmanTable.cpp  HuffmanTable.hpp  JpegExtractor.cpp  JpegExtractor.h  JpegExtractor.hpp  JpegExtractor.vcxproj  JpegExtractor.vcxproj.filters  QuantizationTable.cpp  QuantizationTable.hpp
JpegExtractor/Debug/: JpegExtractor.idb  JpegExtractor.pch
JpegExtractor/Debug/JpegExtractor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  JpegExtractor.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
JpegExtractorTest/: JpegExtractorTest.cpp  JpegExtractorTest.vcxproj  JpegExtractorTest.vcxproj.filters
JpegExtractorTest/Debug/: JpegExtractorTest.pch  vc141.idb
JpegExtractorTest/Debug/JpegExtr.410E7190.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
jpeg_extractor/: CMakeLists.txt
jpeg_extractor/jpeg_extractor/: CMakeLists.txt  component.cpp  component.hpp  huffman_table.hpp  jpeg_extractor.cpp  jpeg_extractor.hpp  quantization_table.cpp  quantization_table.hpp
jpeg_extractor/jpeg_extractor_test/: CMakeLists.txt  jpeg_extractor_test.cpp
jpeg_extractor/jpeg_extractor_test/resources/: answers4.txt
Новая папка/: CMakeLists.txt
Новая папка/jpeg_extractor/jpeg_extractor/: CMakeLists.txt  component.cpp  huffman_table.cpp  jpeg_extractor.hpp  quantization_table.cpp
(+2 files in other folders)
